<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Settings">

    <TextView
        android:id="@+id/textMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/menu"
        android:textColor="?android:textColor"
        android:textSize="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/Button_Help"
        android:layout_width="65dp"
        android:background="?android:colorBackground"
        android:layout_height="63dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_help" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMenu">



        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:textColor="?android:textColor"
            android:textSize="20dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:id="@+id/chooseTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:popupBackground="@color/white"
                 />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:textColor="?android:textColor"
                android:textSize="25dp"
                android:text="@string/fix" />

            <ImageButton
                android:id="@+id/Info"
                android:layout_width="65dp"
                android:background="?android:colorBackground"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_menu_info_details" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="?android:textColor"
            android:text="@string/up" />

        <CheckBox
            android:id="@+id/down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="?android:textColor"
            android:text="@string/down" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:layout_marginRight="20dp"
                android:textColor="?android:textColor"
                android:text="@string/times" />

            <Spinner
                android:id="@+id/whatTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:entries="@array/time"
                android:popupBackground="@color/white" />

        </LinearLayout>




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/net"
            android:textColor="?android:textColor"
            android:textSize="25dp" />


        <LinearLayout
            android:id="@+id/ip_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ip_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:text="@string/ip"
                android:textColor="?android:textColor"
                android:textSize="20dp" />


            <EditText
                android:id="@+id/editText1"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:inputType="number"
                android:maxLength="3" />


            <EditText
                android:id="@+id/editText2"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:ems="10"
                android:inputType="number"
                android:maxLength="3" />


            <EditText
                android:id="@+id/editText3"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:ems="10"
                android:inputType="number"
                android:maxLength="3" />


            <EditText
                android:id="@+id/editText4"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:inputType="number"
                android:maxLength="3" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/port_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_gravity="center"
                android:textColor="?android:textColor"
                android:textSize="20dp"
                android:text="@string/port" />


            <EditText
                android:id="@+id/editText_Port"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:inputType="number"
                android:maxLength="4" />
        </LinearLayout>



    </LinearLayout>

    <Button
        android:id="@+id/applyButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="32dp"
        android:text="@string/apply"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>